# SurfATT-iso

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile.sh
.github/workflows/: build.yml
examples/00_checkerboard_iso/: input_params.yml  plot_mod.ipynb  plot_model.ipynb  run_this_example.sh  src_rec_file_ph.csv
examples/03_checkerboard_2d/: input_params.yml  plot_model.ipynb  run_this_example.sh  src_rec_file_ph.csv
examples/04_hawaii_topo/: input_params.yml  plot_model.ipynb  rotatation.ipynb  run_this_example.sh  src_rec_file_raw.csv  temperature_conti.cpt
external_libs/: CMakeLists.txt
include/: constants.h  version.h.in
src/: CMakeLists.txt  acqui.f90  acqui_2d.f90  decomposer.f90  eikon_solver_2d.f90  grid.f90  measadj.f90  model.f90  optimize.f90  para.f90  setuplog.f90  src_rec.f90  surfatt_cb_fwd.f90  surfatt_cb_fwd.f95  surfatt_rotate_model.f90  surfatt_rotate_src_rec.f95  surfatt_rotate_topo.f90  surfatt_rotate_topo.f95  surfatt_tomo.f90  surfatt_tomo.f95  surfatt_tomo2d.f90  surfatt_tomo2d.f95  tomo.f90  tomo2d.f90  topo.f90
src/fortran-csv/: CMakeLists.txt  csv_module.F90
src/fortran-yaml/: CMakeLists.txt  yaml.f90  yaml_types.f90
src/shared/: CMakeLists.txt  argparse.f90  hdf5_interface.f90  minpack.f90  parallel.f90  setuplog.f90  shared_par.f90  sph2loc.f90  src_rec_parser.f90  stdlib_logger.f90  utils.f90
src/surfker/: CMakeLists.txt  depthkernelTI.f90  slegn96.f90  sregn96.f90  surfdisp96.f  surfker.f90
